# fconfig

./: .cricket  .gitignore  Makefile  pyproject.toml
bash/: init.sh  lib.sh
bash/init/: 00-basic.sh  01-alias.sh  10-fastjump.sh  10-fzf.sh  20-golang.sh  20-python.sh  99-ps.sh  99-term.sh  99-welcome.sh
bash/lib/: 00-common.sh  00-os.sh  01-alias.sh  01-clipboard.sh  01-data.sh  01-math.sh  01-string.sh  01-ui.sh  02-dbus.sh  10-ansi.sh  10-editor.sh  10-ff.sh  10-fzf.sh  60-git.sh  (+11 more)
emacs/: ascii-art  classic-theme.el  fc-app.el  fc-autoloads.el  fc-book.el  fc-bookmark.el  fc-boot.el  fc-buffer.el  fc-calendar.el  fc-charmap.el  fc-clang.el  fc-common.el  fc-company.el  fc-computer.el  fc-config.el  fc-control.el  fc-corfu.el  fc-cscope.el  fc-dict.el  fc-dired.el  fc-edit.el  fc-elisp.el  fc-ergo-seg.el  fc-ergo.el  fc-extra.el  fc-face.el  fc-facility.el  fc-flycheck.el  fc-font.el  fc-format.el  fc-gitignore-mode.el  fc-global.el  fc-golang.el  fc-haskell.el  fc-helm.el  fc-hideshow.el  fc-icon.el  fc-info.el  fc-irony.el  fc-ivy.el  (+56 more)
extra/: alacritty.toml  alacritty.yml  blockdiagrc  cmus.desktop  emacs-py-requirements.txt  fc.cow  keys.7z  kitty.conf  node-icons.txt  powerline-config.json  story.org  terminfo-24bit.src  white-clean.theme
fonts/: fonts.conf
go/: ff-find.go
latex/: zhbook.sty
nvim/: init.vim
org/: bak.puml  fc.org  fc.puml  plot.org  puml-theme-fc.puml  pyplot-test.org  pyplot.lib  pyplot.olib  pyplot.org  pystat-test.org  pystat.lib  pystat.olib
python/: packages.txt  setup.py
test/: pyplot-test.org  pystat-test.org  test.py
(+131 files in other folders)
